--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {
   <br>
 
    <center>
-     <img src="$navbanq.png" alt="a" style="width:175px;height:175px;">
+     <img src="$₦₳V฿₳₦Q.png" alt="a" style="width:175px;height:175px;">
     </center>
 
  <center>
